builds/rhel9-bootc-edgemanager-pos-prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: point-of-sale-service
spec:
  type: NodePort
  selector:
    app: point-of-sale
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
      nodePort: 30000
